# pyquizlet

./: README.md  pyproject.toml
src/pyquizlet/: curl.py  flashcards.py
src/quizlet-api/: curl.py
src/quizletapi/: __init__.py
