[project]
name = "pyquizlet"
version = "0.0.1"
authors = [
  { name="Rohan Gupta"}
]

description = "An unofficial/reverse-engineered Quizlet API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/simplyrohan/pyquizlet/"
Issues = "https://github.com/simplyrohan/pyquizlet/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"